<resources>
    <string name="app_name">Brute Social</string>
    <string name="no_users_found">No users found!</string>
    <string name="login">Login</string>
    <string name="enter_username">Username</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="write_a_message">Type a message</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="enter_password">Password</string>
    <string name="register">Register</string>
</resources>
